hphp/test/zend/good/ext/zip/tests/pecl12414.php.skipif
<?php
/*$ */
if(!extension_loaded('zip')) die('skip');
 ?>