hphp/test/zend/bad/ext/fileinfo/tests/finfo_file_stream_001.php.skipif
<?php require_once(dirname(__FILE__) . '/skipif.inc'); ?>
<?php if (!extension_loaded('zip')) { die("skip"); } ?>